# fastapi-supabase

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: algorithms.py  auth.py  router.py
app/core/: config.py  database.py  security.py
app/models/: algorithm.py  user.py
app/schemas/: algorithm.py  user.py
app/services/: algorithm_service.py  auth_service.py  supabase_service.py
app/utils/: helpers.py
tests/: test_algorithms.py  test_auth.py
