[project]
name = "fastapi-supabase"
version = "0.1.0"
description = "FastAPI backend with Supabase integration for complex algorithm processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "supabase>=2.16.0",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.7.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
